--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -21,7 +21,7 @@
         <header>
 
             <nav class="cabecalho">
-                <a class="logo" href="/public/index.php"></a>
+                <a class="logo" href="/"></a>
 
                 <div class="cabecalho__icones">
                     <a href="/novo-video" class="cabecalho__videos"></a>
