--- a/views/video-list.html.twig
+++ b/views/video-list.html.twig
@@ -16,7 +16,7 @@
                                 allowfullscreen></iframe>
                     {% endif %}
                     <div class="descricao-video">
-                        <img src="../public/img/logo.png" alt="logo canal alura">
+                        <img src="../img/logo.png" alt="logo canal alura">
                         <h3>{{ video.title }}</h3>
                         <div class="acoes-video">
                             <a href="/editar-video?id={{ video.id }}">Editar</a>
